# InkStone-AI

./: README.md  SPEC.md  pyproject.toml  requirements.txt
configs/: systems.yaml  viz.yaml
configs/prompts/: judge_standard_v1.txt  judge_standard_v1_icl.txt  metaphor_tagger_v1.txt  persona_professor_v1.txt  persona_reader_v1.txt  persona_writer_v1.txt  trans_v1.txt
data/processed/: cache.sqlite3  data_quality.jsonl  eval_set.jsonl  freeze_manifest.jsonl  judge_scores.jsonl  metrics_summary.jsonl  metrics_traditional.jsonl  persona_gold.jsonl  pool.jsonl  source_items.jsonl  translation_stats.jsonl  translations.jsonl
docs/: GUI_GUIDE.md  PAPER_PREP_CHECKLIST.md  PLAN.md  REFERENCE_NOTES.md  REFLECTION.md
docs/methodology/: 01_data_construction.md  02_annotation_guidelines.md  03_metric_definition.md
reports/: report.md  run_manifest.jsonl
reports/logs/: experiment_log.md
scripts/: bootstrap.py  download_datasets.py  preflight.py  run_all.py  run_gui.py
src/: __init__.py
src/core/: __init__.py  cache.py  io.py  llm_client.py  metrics_traditional.py  normalize.py  schema.py
src/gui/: __init__.py  app.py  dashboard.py
src/pipeline/: __init__.py  baseline.py  build_dataset.py  config.py  data_sources.py  icl_builder.py  judge_persona.py  judge_standard.py  metrics.py  report.py  run_all.py  translate.py  visualization.py
tests/: test_dashboard_data.py  test_smoke.py
